<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorEerieBlack">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:hint="Search..."
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="?attr/fontRobotoBold"
        android:text="@string/app_name"
        android:textColor="?attr/colorWhite"
        android:textSize="42sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_filter"
        android:tint="?attr/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/tvHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHeader" />

    <RadioGroup
        android:id="@+id/rgNoteOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        tools:checkedButton="@id/rbDate">

        <RadioButton
            android:id="@+id/rbTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="?attr/fontRobotoRegular"
            android:text="@string/title"
            android:textColor="?attr/colorWhite"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="?attr/fontRobotoRegular"
            android:text="@string/date"
            android:textColor="?attr/colorWhite"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="?attr/fontRobotoRegular"
            android:text="@string/color"
            android:textColor="?attr/colorWhite"
            android:textSize="16sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgOrderType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgNoteOrder"
        tools:checkedButton="@id/rbDescending">

        <RadioButton
            android:id="@+id/rbAscending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="?attr/fontRobotoRegular"
            android:text="@string/ascending"
            android:textColor="?attr/colorWhite"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbDescending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="?attr/fontRobotoRegular"
            android:text="@string/descending"
            android:textColor="?attr/colorWhite"
            android:textSize="16sp" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgOrderType"
        tools:listitem="@layout/item_note" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="?attr/colorEerieBlack"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="?attr/colorWhite" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="rgNoteOrder,rgOrderType"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>