<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorEerieBlack">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorGray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDeleteNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="34dp"
        android:layout_marginTop="16dp"
        android:fontFamily="?attr/fontRobotoMedium"
        android:text="@string/update_note_question"
        android:textAlignment="center"
        android:textColor="?attr/colorGray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivWarning" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDiscard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="?attr/colorRed"
        android:fontFamily="?attr/fontRobotoRegular"
        android:paddingHorizontal="26dp"
        android:text="@string/discard"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDeleteNote" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="?attr/colorGreen"
        android:fontFamily="?attr/fontRobotoRegular"
        android:paddingHorizontal="26dp"
        android:text="@string/update"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDeleteNote" />

</androidx.constraintlayout.widget.ConstraintLayout>